--- a/src/app/components/details/details.component.html
+++ b/src/app/components/details/details.component.html
@@ -6,7 +6,7 @@
     <li><strong>Email:</strong> {{users.email}}</li>
     <li><strong>Phone:</strong> {{users.phone}}</li>
   </ul>
-  <h1>Blue Google Button</h1>
+  <h1>POSTS:</h1>
   <button class="blue"><a [routerLink]="['/posts']" [queryParams]="{userId: users.id}">Posts</a></button>
 
 
