--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="posts" routerLinkActive="activated">
+      <a routerLink="posts" routerLinkActive="activated" (click)="clearStorage()">
         <i class="material-icons">message</i>
       </a>
     </li>
